--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,9 +4,17 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+  justify-content: center;
+  background-color: lightgrey;
 }
-
+.barCodeContainer {
+  background-color: white;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
 .description {
   display: inherit;
   justify-content: inherit;
@@ -97,7 +105,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
